* Upload new example report and update the link in the docs
* report should indicate subs that have been merged
* report totals (evals and subs) should account for things merged away
  eg perhaps add $si->subs_defined_count() that includes count of merged subs
* resolve undef warnings from nytprofhtml on (eg) perlcritic of perlcritic

Major changes:

  Added profile reporting of code executed in string evals.
    Each string eval executed gets it's own report page.
    You can 'see' the code that was executed, with profile info.
    String evals may be collapsed/merged in some cases.

  Improved many sub-optimal behaviours related to string evals.

  Subroutine calls that couldn't be associated with a specific line,
    such as calls made by perl to END blocks, are now shown in reports.

  Subroutine definitions that couldn't be associated with a specific file,
    such as xsubs in packages with no perl source, are now shown in reports.

  Enabled savesrc=1 by default.

  The data file format has changed so v3.x files can't be read.
  The Devel::NYTProf::ReadStream interface has also changed.

Other changes:

  Fixed off-by-1 error in number of Files an xsub/opcode was called from.
  Fixed Devel::NYTProf::Apache to work in more situations
    and enable the addpid option by default.

  Improved behaviour for 'duplicate' anon-subs defined in separate
    invocations of a particular string eval.
  Multiple BEGINs (e.g., use) on the same line get distinct names.

  Added automatic detection of calls to POSIX::_exit() by the sub profiler
    so finish_profile() gets called and a usable profile is produced.
  Added posix_exit=1 option to do the same thing (in a different way)
    when the sub profiler is not being used (i.e., subs=0).

Documentation Changes:

  Sequences of blank lines are skipped in generated reports.
    Relevant for savesrc mode in which perl doesn't store pod sections.
  Corrected typos in nytprofhtml docs thanks to chocolate@cpan.org.